--- a/Jquery complete/15_only_child.html
+++ b/Jquery complete/15_only_child.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src='12_nth_child.js'></script>
+    <script src='15_only_child.js'></script>
 </head>
 
 <body>
@@ -23,6 +23,9 @@
     <p> This is first child of parent 2 </p>
     <p> This the second child of parent 2 </p>
     <p> This is the third child of parent 3 </p>
+</div>
+<div class="parent3">
+    <p> This is the only child of parent 3</p>
 </div>
 </body>
 </html>
